# antsdr-dfone

./: .gitignore  BUILD_ON_UBUNTU.md  README.md  README_CN.md
DFONE_User_GUI_Source/: API_USAGE.md
DFONE_User_GUI_Source/host_app/DFONE/: .gitignore
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/apps-static/: ALL_BUILD.vcxproj  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dfone_user_apps.slnx  dfone_user_cli.vcxproj  dfone_user_cli.vcxproj.filters  dfone_user_gui.vcxproj  dfone_user_gui.vcxproj.filters
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/apps-static/dfone_host/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  dfone_host.slnx  dfone_host.vcxproj  dfone_host.vcxproj.filters
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/apps-static/dfone_user_cli.dir/Release/: dfone_user_cli.exe.recipe
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/apps-static/dfone_user_cli.dir/Release/dfone_user_cli.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/apps-static/dfone_user_gui.dir/Release/: dfone_user_gui.exe.recipe
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/sdk-shared/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dfone_host.slnx  dfone_host.vcxproj  dfone_host.vcxproj.filters  install_manifest.txt
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/sdk-shared/Release/: dfone_host.exp
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/sdk-shared/dfone_host.dir/Release/: dfone_host.dll.recipe
DFONE_User_GUI_Source/host_app/DFONE/build-windows-release/sdk-static/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dfone_host.slnx  dfone_host.vcxproj  dfone_host.vcxproj.filters  install_manifest.txt
DFONE_User_GUI_Source/host_app/DFONE/matlab/: README.md  build_dfone_mex.m  dfone_mex.cpp
DFONE_User_GUI_Source/host_app/DFONE/plutosdr_signal_source/: pluto_signal_source.py
DFONE_User_GUI_Source/host_app/DFONE/public/include/dfone/: session.hpp
DFONE_User_GUI_Source/host_app/DFONE/src/public/: maintenance.cpp
DFONE_User_GUI_Source/host_app/DFONE/user_gui/: CMakeLists.txt  vcpkg.json
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  dfone_user_apps.slnx  dfone_user_cli.vcxproj  dfone_user_cli.vcxproj.filters  dfone_user_gui.vcxproj  dfone_user_gui.vcxproj.filters
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/dfone_host/: ALL_BUILD.vcxproj  INSTALL.vcxproj  INSTALL.vcxproj.filters  PACKAGE.vcxproj  PACKAGE.vcxproj.filters  cmake_install.cmake  dfone_host.slnx  dfone_host.vcxproj  dfone_host.vcxproj.filters
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/dfone_host/dfone_host.dir/Release/: dfone_host.lib.recipe
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/dfone_host/dfone_host.dir/Release/dfone_host.tlog/: CL.command.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  dfone_host.lastbuildstate
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/dfone_user_gui.dir/Release/: dfone_user_gui.exe.recipe
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/dfone_user_gui.dir/Release/dfone_user_gui.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  dfone_user_gui.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
DFONE_User_GUI_Source/host_app/DFONE/user_gui/build-win-single-exe/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
DFONE_User_GUI_Source/host_app/DFONE/user_gui/src/: user_cli.cpp  user_gui.cpp
DFONE_User_GUI_Source/host_app/DFONE/user_gui/tools/: package_release.sh  package_windows_single_exe.ps1
DFONE_User_GUI_Source/host_app/DFONE/windows/: README_RNDIS.md
host_app/DFONE/: BUILD_WINDOWS.md  CMakeLists.txt  PUBLIC_API_MANUAL.md  README.md  build_windows_gui.bat  build_windows_release.bat  clean_windows_build.bat
host_app/DFONE/build-windows-release/apps-static/dfone_host/Release/: dfone_host.lib
host_app/DFONE/examples/windows_cli_capture/: CMakeLists.txt
host_app/DFONE/factory/include/dfone/internal/: doa_processing.hpp  iq_processing.hpp
host_app/DFONE/factory/src/: doa_processing.cpp
host_app/DFONE/matlab/+dfone/: DfOne.m
host_app/DFONE/plutosdr_signal_source/: README.md  requirements.txt
host_app/DFONE/src/common/include/dfone/internal/: control_client.hpp  protocol.hpp  stream_client.hpp
host_app/DFONE/src/public/: session.cpp
host_app/DFONE/src/transport/: control_client.cpp  stream_client.cpp
host_app/DFONE/tools/: build_release.sh  clean_windows_build.ps1  package_windows_release.ps1
host_app/DFONE/user_gui/: README.md
host_app/DFONE/user_gui/build-win-single-exe/dfone_host/Release/: dfone_host.lib
host_app/DFONE/user_gui/tools/: package_appimage.sh
host_app/DFONE/windows/: dfone_rndis.inf
(+65 files in other folders)
